# telegram_ml_contest_2023

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
resources/: v1_code_vs_other_depth11_vocab15000.cbm
src/: CMakeLists.txt  Classification-Trees-Code-Languages.ipynb  Classification-Trees-Code-VS-NoCode.ipynb  text.txt  tglang.cpp  tglang.h
train/: codevsotherv1.csv
train/ml2023-d1-dataset/00/: 0007f0c5958d21cf9075-CODE.txt  000acbe3712ca72d8af7-OTHER.txt  000cbbb11264710b764a-OTHER.txt  00101ca98116ef0b6840-OTHER.txt  00158b2ad5055c3961dc-OTHER.txt  00165a7d8e5ad85884ca-OTHER.txt  0020b21c453e75af27ae-OTHER.txt  0023b52f9079b7f90a6e-OTHER.txt  0024bbbee1a9592bb54b-OTHER.txt  0025d1537ac408975ca7-OTHER.txt  0028cb58e81c3b6d9d9d-OTHER.txt  002932538c9cf4ba9fad-OTHER.txt  002d5f61e624bfb245c1-OTHER.txt  002f9ada081a6c6402f1-OTHER.txt  003229694cf4409873f0-OTHER.txt  0033529ea40379004755-OTHER.txt  0034b22e4c9269c314fa-OTHER.txt  00359656f098a82a59b7-OTHER.txt  0038d3f8a2e84234f3ba-CODE.txt  003ff5ab0e02d073929f-OTHER.txt  004573120b6a2df54f62-OTHER.txt  0046f8eaa45f66f5df00-OTHER.txt  0047042141f4c15155d5-CODE.txt  004ac457545568b3ab7f-OTHER.txt  004c314f01f0fb852a9d-OTHER.txt  004c93d09f495640b9b1-OTHER.txt  004cdc5fd847b4e2aaa5-OTHER.txt  004e3dfe7aac197fead5-OTHER.txt  00502bac4f7bfd1960ff-OTHER.txt  0050ee96463302e9089d-OTHER.txt  005afa94cf7bf7c33948-OTHER.txt  005b3d200af4322a3d58-OTHER.txt  005e4d23de5510452353-OTHER.txt  00616793092c49f6066f-OTHER.txt  0063a315c3b6cfd60cf4-OTHER.txt  00661e8cd937c8d65aac-OTHER.txt  00693eca49f09efcea22-OTHER.txt  (+60 more)
(+42281 files in other folders)
